# tlsh

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
cmake/: FindCatch2.cmake
data/: expected.txt
include/tlsh/: tlsh.h  tlsh_impl.h
python/: CMakeLists.txt
python/inc/: tlsh.hpp
python/src/: tlsh.cpp
python/tests/: test_tlsh.py
python/tlsh/: __init__.py
src/: CMakeLists.txt  shared_file_functions.cpp  tlsh.cpp  tlsh_impl.cpp  tlsh_util.cpp
src/inc/: shared_file_functions.h  tlsh.h  tlsh_impl.h  tlsh_util.h  tlsh_version.h.in  tlsh_win_version.h
src/tests/: CMakeLists.txt  perf_basic.cpp  test_basic.cpp  test_batch.cpp
tests/: base_dataset.txt  expected.txt
tests/datasets/: base.txt
tests/datasets/extended/: code_share.x64.json  code_share2.x64.json  test_output  version1.arm.json  version1.x64.json  version2.arm.json  version2.x64.json  version3.arm.json  version3.x64.json  version4.x64.json
tests/datasets/extended/samples/c/src/: code_share.c  code_share2.c  main.c  version1.c  version2.c  version3.c  version4.c
tests/datasets/extended/samples/cpp/src/: OnWeek1.cpp  OnWeek2.cpp
tests/datasets/extended/samples/go/src/TC01/: tc_01.go
tests/datasets/extended/samples/go/src/TC02/: tc_02.go
tests/datasets/extended/samples/go/src/TC04/: go.mod  tc_04.go
