[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "tlsh-python"
version = "0.1.0"
description = "Python bindings for TLSH."
readme = "./README.md"
license.file = "./LICENSE"
requires-python = ">=3.8"
authors = [{ name = "Christophe Alladoum", email = "calladoum@elastic.co" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
]

dependencies = ["setuptools", "wheel"]

[project.optional-dependencies]
dev = ["black"]

tests = ["pytest", "pytest-benchmark"]

all = ["dev", "tests"]

[project.urls]
Homepage = "https://github.com/dmikushin/tlsh"

[tool.isort]
profile = "black"

[tool.scikit-build]
wheel.py-api = "cp312"
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.20"

# Uncomment for debug (+ASAN)
# cmake.verbose = true
# logging.level = "DEBUG"
# cmake.build-type = "Debug"
